--- a/site/unit-definitions.html
+++ b/site/unit-definitions.html
@@ -194,6 +194,8 @@
 <tr><td>ch</td><td>735.49875</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>chevaux</td></tr>
 <tr><td>chain</td><td><math><mfrac><mn>79200</mn><mn>3937</mn></mfrac></math></td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>66 survey feet</td></tr>
 <tr><td>cheval vapeur</td><td>735.49875</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>metric hp</td></tr>
+<tr><td>cmHg</td><td>1330</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
+<tr><td>cmH₂O</td><td>98.08</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>cmil</td><td>5.06707479097497e-10</td><td>0</td><td>0</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>circular mils</td></tr>
 <tr><td>cmm</td><td>0.00001</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>centi-milli-meter = 0.01 mm</td></tr>
 <tr><td>constant</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>constant, i.e. non-dimensional</td></tr>
@@ -248,7 +250,8 @@
 <tr><td>fps</td><td>0.3048</td><td>0</td><td>0</td><td>1</td><td>0</td><td>-1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>feet/sec</td></tr>
 <tr><td>franklin</td><td>0.00000000033356</td><td>0</td><td>siWord</td><td>0</td><td>0</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>statcoulomb</td></tr>
 <tr><td>ft</td><td>0.3048</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>feet</td></tr>
-<tr><td>ft water</td><td>2988.874</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>62.4 psf</td></tr>
+<tr><td>ft water</td><td>2989</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>62.4 psf</td></tr>
+<tr><td>ftH₂O</td><td>2989</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>62.4 psf</td></tr>
 <tr><td>ftc</td><td>10.7639104167097</td><td>0</td><td>0</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>footcandle</td></tr>
 <tr><td>ftl</td><td>3.426259</td><td>0</td><td>0</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>luminance</td></tr>
 <tr><td>furlong</td><td>201.168</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>660 feet</td></tr>
@@ -297,7 +300,9 @@
 <tr><td>hpS</td><td>9812.5</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>steam horsepower</td></tr>
 <tr><td>hr</td><td>3600</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>in</td><td>0.0254</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>inch</td></tr>
-<tr><td>in Hg</td><td>3863.8</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
+<tr><td>in Hg</td><td>3378</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
+<tr><td>inHg</td><td>3378</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
+<tr><td>inH₂O</td><td>249.1</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>inch</td><td>0.0254</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>inche</td><td>0.0254</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>jansky</td><td>1e-26</td><td>0</td><td>0</td><td>0</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>radio flux density</td></tr>
@@ -354,6 +359,7 @@
 <tr><td>lx</td><td>1</td><td>0</td><td>siSymbol</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>lux</td></tr>
 <tr><td>m</td><td>1</td><td>0</td><td>siSymbol</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>meter</td></tr>
 <tr><td>mD</td><td>9.869233e-16</td><td>0</td><td>0</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>millidarcy</td></tr>
+<tr><td>mH₂O</td><td>9808</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>marathon</td><td>42195</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>~26 mi</td></tr>
 <tr><td>marla</td><td>25.29285264</td><td>0</td><td>0</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>272.25 ft²</td></tr>
 <tr><td>mas</td><td><math><mfrac><mn>3.14159265358979</mn><mn>648000000</mn></mfrac></math></td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>milli-arcsec</td></tr>
@@ -378,6 +384,7 @@
 <tr><td>moa</td><td><math><mfrac><mn>3.14159265358979</mn><mn>10800</mn></mfrac></math></td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>arcminute</td></tr>
 <tr><td>mol</td><td>6.02214179e+23</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>mole</td></tr>
 <tr><td>mole</td><td>6.02214179e+23</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>amount of substance for PV=nRT</td></tr>
+<tr><td>mmHg</td><td>133</td><td>0</td><td>0</td><td>-1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>mpg</td><td><math><mfrac><mn>1609.344</mn><mn>0.003785411784</mn></mfrac></math></td><td>0</td><td>0</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>miles/gal</td></tr>
 <tr><td>mph</td><td>0.44704</td><td>0</td><td>0</td><td>1</td><td>0</td><td>-1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>miles/hour</td></tr>
 <tr><td>mt</td><td>1000</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>metric ton</td></tr>
