Add tonnef to units

--- a/site/unit-definitions.html
+++ b/site/unit-definitions.html
@@ -512,6 +512,7 @@
 <tr><td>ton TNT</td><td>4184000000</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>ton refrigeration</td><td>3516.8532</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>12 000 BTU/hr</td></tr>
 <tr><td>tonne</td><td>1000</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>metric ton</td></tr>
+<tr><td>tonnef</td><td>9806.65</td><td>0</td><td>0</td><td>1</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>metric ton force</td></tr>
 <tr><td>tons TNT</td><td>4184000000</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>tons refrigeration</td><td>3516.8532</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>township</td><td>93239571.972096</td><td>0</td><td>0</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>36 mi²</td></tr>
