Load currency rates at runtime

--- a/site/unit-definitions.html
+++ b/site/unit-definitions.html
@@ -27,7 +27,7 @@
 <th>Comment</th></tr>
 <tr><td>#</td><td>0.45359237</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>pound (mass)</td></tr>
 <tr><td>$</td><td>1</td><td>0</td><td>USD</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>US dollar</td></tr>
-<tr><td>&#x27;</td><td>0.3048</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>Foot</td></tr>
+<tr><td>&#x27;</td><td>0.3048</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>foot</td></tr>
 <tr><td>A</td><td>1</td><td>0</td><td>siSymbol</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>amperes</td></tr>
 <tr><td>AUD</td><td>1</td><td>0</td><td>AUD</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>Adobe point</td><td><math><mfrac><mn>0.0254</mn><mn>72</mn></mfrac></math></td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>inch/72</td></tr>
@@ -37,20 +37,21 @@
 <tr><td>BTU</td><td>1055.056</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>British thermal unit</td></tr>
 <tr><td>BThU</td><td>1055.056</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>Bq</td><td>1</td><td>0</td><td>siSymbol</td><td>0</td><td>0</td><td>-1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>becquerel</td></tr>
-<tr><td>Brazilian Real</td><td>1</td><td>0</td><td>BRL</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
-<tr><td>British Pound</td><td>1</td><td>0</td><td>GBP</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
+<tr><td>Brazilian real</td><td>1</td><td>0</td><td>BRL</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
+<tr><td>British pound</td><td>1</td><td>0</td><td>GBP</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>Btu</td><td>1055.056</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>British thermal unit</td></tr>
 <tr><td>C</td><td>1</td><td>0</td><td>siSymbol</td><td>0</td><td>0</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>coulomb</td></tr>
 <tr><td>C$</td><td>1</td><td>0</td><td>CAD</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
-<tr><td>CAD</td><td>1</td><td>0</td><td>CAD</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>C$</td></tr>
+<tr><td>CAD</td><td>1</td><td>0</td><td>CAD</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Canadian dollar</td></tr>
 <tr><td>CCF</td><td>2.8316846592</td><td>0</td><td>0</td><td>3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>100 cubic feet</td></tr>
 <tr><td>CHF</td><td>1</td><td>0</td><td>CHF</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Swiss franc</td></tr>
 <tr><td>CNY</td><td>1</td><td>0</td><td>CNY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Chinese Yuan Renminbi</td></tr>
+<tr><td>CN¥</td><td>1</td><td>0</td><td>CNY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>CY</td><td>0.764554857984</td><td>0</td><td>0</td><td>3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>cu yard</td></tr>
 <tr><td>Calorie</td><td>4186.8</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>food calorie</td></tr>
 <tr><td>Canadian dollar</td><td>1</td><td>0</td><td>CAD</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>Celsius</td><td>1</td><td>273.15</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td></td></tr>
-<tr><td>Chinese Yuan</td><td>1</td><td>0</td><td>CNY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
+<tr><td>Chinese yuan</td><td>1</td><td>0</td><td>CNY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>Ci</td><td>37000000000</td><td>0</td><td>siSymbol</td><td>0</td><td>0</td><td>-1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>curie</td></tr>
 <tr><td>Ckm</td><td>100000</td><td>0</td><td>siSymbol</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>100 km, used for L/100 km</td></tr>
 <tr><td>Da</td><td>1.66053872e-24</td><td>0</td><td>siSymbol</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
@@ -79,11 +80,11 @@
 <tr><td>Hz</td><td>1</td><td>0</td><td>siSymbol</td><td>0</td><td>0</td><td>-1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>hertz</td></tr>
 <tr><td>ILS</td><td>1</td><td>0</td><td>ILS</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>INR</td><td>1</td><td>0</td><td>INR</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
-<tr><td>Indian Rupee</td><td>1</td><td>0</td><td>INR</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
+<tr><td>Indian rupee</td><td>1</td><td>0</td><td>INR</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>Israeli New Shekel</td><td>1</td><td>0</td><td>ILS</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>J</td><td>1</td><td>0</td><td>siSymbol</td><td>2</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>joule</td></tr>
 <tr><td>JPY</td><td>1</td><td>0</td><td>JPY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>yen</td></tr>
-<tr><td>Japanese Yen</td><td>1</td><td>0</td><td>JPY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>yen</td></tr>
+<tr><td>Japanese yen</td><td>1</td><td>0</td><td>JPY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>yen</td></tr>
 <tr><td>Joule</td><td>1</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1 N·m</td></tr>
 <tr><td>Julian year</td><td>31557600</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>365.24 days</td></tr>
 <tr><td>Jy</td><td>1e-26</td><td>0</td><td>siSymbol</td><td>0</td><td>1</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>jansky</td></tr>
@@ -103,7 +104,7 @@
 <tr><td>MXN</td><td>1</td><td>0</td><td>MXN</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Mexican peso</td></tr>
 <tr><td>Mach</td><td>331.6</td><td>0</td><td>0</td><td>1</td><td>0</td><td>-1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>speed relative to speed of sound</td></tr>
 <tr><td>Mbbl</td><td>158.987294928</td><td>0</td><td>0</td><td>3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1000 barrels</td></tr>
-<tr><td>Mexican Peso</td><td>1</td><td>0</td><td>MXN</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
+<tr><td>Mexican peso</td><td>1</td><td>0</td><td>MXN</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>MiB</td><td>8388608</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>megabyte = 8×2^20 bits</td></tr>
 <tr><td>Mscfd</td><td>0.00032774128</td><td>0</td><td>0</td><td>3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1000 std cu ft per day</td></tr>
 <tr><td>Mscfh</td><td>0.00786579072</td><td>0</td><td>0</td><td>3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1000 std cu ft per hour</td></tr>
@@ -117,13 +118,14 @@
 <tr><td>PiB</td><td>9007199254740990</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>pebibyte = 8×2^50 bits</td></tr>
 <tr><td>R</td><td>0.000258</td><td>0</td><td>siSymbol</td><td>0</td><td>-1</td><td>1</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>roentgen</td></tr>
 <tr><td>R$</td><td>1</td><td>0</td><td>BRL</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Brazil real</td></tr>
+<tr><td>RNB</td><td>1</td><td>0</td><td>CNY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Chinese Yuan Renminbi</td></tr>
 <tr><td>RT</td><td>3516.8532</td><td>0</td><td>0</td><td>2</td><td>1</td><td>-3</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>ton refrig&#x27;n</td></tr>
-<tr><td>RUB</td><td>1</td><td>0</td><td>RUB</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Russion rouble</td></tr>
+<tr><td>RUB</td><td>1</td><td>0</td><td>RUB</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Russion ruble</td></tr>
 <tr><td>S</td><td>1</td><td>0</td><td>siSymbol</td><td>-2</td><td>-1</td><td>3</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>siemen</td></tr>
 <tr><td>SF</td><td>0.09290304</td><td>0</td><td>0</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>square feet</td></tr>
 <tr><td>SY</td><td>0.83612736</td><td>0</td><td>0</td><td>2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>square yards</td></tr>
 <tr><td>Sv</td><td>1</td><td>0</td><td>siSymbol</td><td>2</td><td>0</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>sievert</td></tr>
-<tr><td>Swiss Franc</td><td>1</td><td>0</td><td>CHF</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
+<tr><td>Swiss franc</td><td>1</td><td>0</td><td>CHF</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>T</td><td>1</td><td>0</td><td>siSymbol</td><td>-2</td><td>-2</td><td>-2</td><td>-1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>tesla (flux density)</td></tr>
 <tr><td>TB</td><td>8796093022208</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>terabyte = 8×2^40 bits</td></tr>
 <tr><td>TWD</td><td>1</td><td>0</td><td>TWD</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>New Taiwan Dollar</td></tr>
@@ -536,6 +538,7 @@
 <tr><td>yd</td><td>0.9144</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td></td></tr>
 <tr><td>year</td><td>31556952</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>avg Gregorian year</td></tr>
 <tr><td>yen</td><td>1</td><td>0</td><td>JPY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
+<tr><td>yuan</td><td>1</td><td>0</td><td>CNY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>£</td><td>1</td><td>0</td><td>GBP</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>¥</td><td>1</td><td>0</td><td>JPY</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td></td></tr>
 <tr><td>°</td><td><math><mfrac><mn>3.14159265358979</mn><mn>180</mn></mfrac></math></td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>degree (plane angle)</td></tr>
@@ -547,7 +550,9 @@
 <tr><td>Å</td><td>0.0000000001</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>angstrom</td></tr>
 <tr><td>Ω</td><td>1</td><td>0</td><td>siSymbol</td><td>2</td><td>1</td><td>-3</td><td>-2</td><td>0</td><td>0</td><td>0</td><td>0</td><td>ohm</td></tr>
 <tr><td>”</td><td>0.0254</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>Inch</td></tr>
+<tr><td>₣</td><td>1</td><td>0</td><td>CHF</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Swiss franc</td></tr>
 <tr><td>₨</td><td>1</td><td>0</td><td>INR</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Indian Rupee</td></tr>
+<tr><td>₹</td><td>1</td><td>0</td><td>INR</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Indian Rupee</td></tr>
 <tr><td>₪</td><td>1</td><td>0</td><td>ILS</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>New Skekel</td></tr>
 <tr><td>€</td><td>1</td><td>0</td><td>EUR</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>Euro</td></tr>
 <tr><td>℃</td><td>1</td><td>273.15</td><td>0</td><td>0</td><td>0</td><td>0</td><td>0</td><td>1</td><td>0</td><td>0</td><td>0</td><td></td></tr>
