--- a/site/offline.html
+++ b/site/offline.html
@@ -7,6 +7,7 @@
   <title>Hurmet.org</title>
   <link rel="stylesheet" href="/styles.min.css">
   <style id="pageStyle">@media print {@page{size: letter; margin: 16mm 0.75in 16mm 0.75in;}}</style>
+  <script>globalThis.currencyRates = {"USD":"1.1787","JPY":"183.83","BGN":"1.9558","CZK":"24.271","DKK":"7.4694","GBP":"0.87290","HUF":"389.53","PLN":"4.2135","RON":"5.0899","SEK":"10.8055","CHF":"0.9284","ISK":"148.00","NOK":"11.8040","TRY":"50.5072","AUD":"1.7587","BRL":"6.5076","CAD":"1.6128","CNY":"8.2679","HKD":"9.1655","IDR":"19740.28","ILS":"3.7514","INR":"105.7755","KRW":"1707.04","MXN":"21.1015","MYR":"4.7678","NZD":"2.0197","PHP":"69.269","SGD":"1.5135","THB":"36.593","ZAR":"19.6091","EUR":"1.0"}</script>
 </head>
 
 <body>
